--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@
 
 Longer term
 * Gas consumption
+* Automatic gas switching
+* CNS tracking
 
 
 From https://github.com/torvalds/subsurface-for-dirk/blob/master/core/deco.c
