--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,14 @@ TODO this list :) [also check TO-DOs in .py's]
 https://docs.streamlit.io/api.html#add-widgets-to-sidebar
 => streamlit.file_uploader
 
+* deco obligation (shaded) in plotly chart
+* update_stops as opposed to add_stops, so that you can see eg. ceiling and deco obligation compared between GF's
+* Streamlit to separate dir
+* mark interpolated points and remove those when recompute_stops
+Master and develop.
+Git clone op AWS
+
+
 Longer term
 * Gas consumption
 * CNS tracking
