--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@ TODO this list :) [also check TO-DOs in .py's]
 
 * Editing dives (streamlit, separate branch)
 
+* move UI.py from deco into ui_streamlit
+
 * Import CSV from shearwater log
 https://docs.streamlit.io/api.html#add-widgets-to-sidebar
 => streamlit.file_uploader
