--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,11 @@
 TODO this list :) [also check TO-DOs in .py's]
 
-* Gas consumption
+* Last stop at 6m
 * CNS tracking
+** remember half-time on surface: 90 mins (TSD PDF page 42)
+
+
+* Gas consumption
 
 
 * (how to take into account alveolar? remove this detail again?)
