--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,6 @@ See Deco for Divers, page 177/178.
 -> And remove numpy if it's still there
 
 23/5
-Meter to bar (incl next db version)
 Alveolar pressure (incl next db version)
 
 BEFORE:
@@ -64,3 +63,34 @@ AFTER MODIFYING 3 MINS GAS SWITCH TO BE ON OLD GAS
   A T   68.7  D   1.0  G Air    DD   0.2  FS   0.0  C   0.0   GF  47.4/62.6   SGF   64.5
     T   68.8  D   0.0  G Air    DD   0.1  FS   0.0  C   0.0   GF  64.4/65.0   SGF   64.4
     T   69.7  D   0.0  G Air    DD   0.9  FS   0.0  C   0.0   GF  63.3/65.0   SGF   63.3
+
+# After fixing depth/pressure conversions & surface pressure
+{'Deco model (display)': 'ZHL-16C GF 35/65', 'Deco model (profile)': 'ZHL-16C GF 35/65', 'Gases carried': {'Air', 'Nx50'}, 'Total dive time': '67.6 mins', 'Decompression time': '32.3 mins', 'Deco profile comp time': '0.01 secs'
+, 'Full info comp time': '0.01 secs'}
+{'depth': 30, 'time': 35.0, 'gas': Air}
+{'depth': 21.0, 'time': 38.9}
+{'depth': 21.0, 'time': 38.9, 'gas': Nx50}
+{'depth': 12.0, 'time': 40.8076904296875}
+{'depth': 9.0, 'time': 44.750878906249994}
+{'depth': 6.0, 'time': 51.79465332031249}
+{'depth': 3.0, 'time': 67.28752441406249}
+{'depth': 0.0}
+    T    0.0  D   0.0  P  1.0  G Air    DD   0.0  FS   0.0  C   0.0   GF   0.0/35.0   SGF    0.0
+    T    1.5  D  30.0  P  4.0  G Air    DD   1.5  FS   0.0  C   0.0   GF   0.0/35.0   SGF    2.2
+    T   35.0  D  30.0  P  4.0  G Air    DD  33.5  FS  12.0  C  12.6   GF   0.0/35.0   SGF  144.2  1.9@12m[Nx50] 3.3@9m[Nx50] 6.2@6m[Nx50] 14.3@3m[Nx50]
+ D  T   35.9  D  21.0  P  3.1  G Air    DD   0.9  FS  12.0  C  12.3   GF   0.0/35.0   SGF  145.2  1.6@12m[Nx50] 3.3@9m[Nx50] 6.1@6m[Nx50] 14.3@3m[Nx50]
+ D  T   38.9  D  21.0  P  3.1  G Air    DD   3.0  FS  12.0  C  11.0   GF   0.0/35.0   SGF  144.6  1.0@12m[Nx50] 3.6@9m[Nx50] 6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   38.9  D  21.0  P  3.1  G Nx50   DD   0.0  FS  12.0  C  11.0   GF   0.0/35.0   SGF  144.6  1.0@12m[Nx50] 3.6@9m[Nx50] 6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   39.8  D  12.0  P  2.2  G Nx50   DD   0.9  FS  12.0  C  10.0   GF  27.8/36.4   SGF  140.8  1.0@12m[Nx50] 3.6@9m[Nx50] 6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   40.8  D  12.0  P  2.2  G Nx50   DD   1.0  FS   9.0  C   8.9   GF  22.8/36.4   SGF  135.9  3.6@9m[Nx50] 6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   41.1  D   9.0  P  1.9  G Nx50   DD   0.3  FS   9.0  C   8.6   GF  41.6/43.5   SGF  134.4  3.6@9m[Nx50] 6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   44.8  D   9.0  P  1.9  G Nx50   DD   3.6  FS   6.0  C   6.0   GF  24.1/43.5   SGF  121.6  6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   45.1  D   6.0  P  1.6  G Nx50   DD   0.3  FS   6.0  C   5.8   GF  49.4/50.7   SGF  120.6  6.7@6m[Nx50] 15.2@3m[Nx50]
+ D  T   51.8  D   6.0  P  1.6  G Nx50   DD   6.7  FS   3.0  C   3.0   GF  23.5/50.7   SGF  102.1  15.2@3m[Nx50]
+ D  T   52.1  D   3.0  P  1.3  G Nx50   DD   0.3  FS   3.0  C   2.9   GF  56.8/57.8   SGF  101.3  15.2@3m[Nx50]
+ D  T   67.3  D   3.0  P  1.3  G Nx50   DD  15.2  FS   0.0  C   0.0   GF  19.7/57.8   SGF   64.9
+  A T   67.5  D   1.0  P  1.1  G Air    DD   0.2  FS   0.0  C   0.0   GF  48.4/62.6   SGF   64.6
+    T   67.6  D   0.0  P  1.0  G Air    DD   0.1  FS   0.0  C   0.0   GF  64.5/65.0   SGF   64.5
+    T   68.5  D   0.0  P  1.0  G Air    DD   0.9  FS   0.0  C   0.0   GF  63.3/65.0   SGF   63.3
+
+
